--- a/config.json
+++ b/config.json
@@ -1,26 +1,26 @@
 {
   "train": {
-    "ckpt": "translate",
-    "size": 128,
-    "latent_dim": 64,
+    "size": 256,
+    "latent_dim": 16,
     "en_vocab_size": 6000,
     "fr_vocab_size": 6000,
-    "data_dir": "corpus/line_based",
-    "train_dir": "models",
+    "data_dir": "corpus/line_based_7",
+    "num_layers": 1,
     "dnn_in_between": true,
     "batch_norm": false,
     "use_lstm": false,
     "mean_logvar_split": false,
     "elu": true,
-    "buckets": [0, 1, 2],
+    "buckets": [[8,9]],
+    "beam_size": 0,
     "bidirectional": false,
     "learning_rate": 0.001,
     "kl_rate_rise_factor": 0.001,
     "max_gradient_norm": 5.0,
     "batch_size": 256,
     "kl_rate_rise_time": 50000,
-    "Lambda": 2,
-    "latent_splits": 64,
+    "Lambda": 256,
+    "latent_splits": 16,
     "max_train_data_size": 0,
     "steps_per_checkpoint": 2000,
     "annealing": false,
@@ -30,89 +30,81 @@
     "input_file": "input.txt",
     "num_pts": 0,
     "num_samples": 0,
-    "decode": false,
-    "self_test": false,
-    "interpolate": false,
     "load_embeddings": false,
     "Lambda_annealing": false,
-    "probabilistic": false
+    "probabilistic": true,
+    "orthogonal_initializer": true
   },
-  "decode": {
-    "ckpt": "translate",
-    "size": 128,
-    "latent_dim": 64,
+  "encode_decode": {
+    "size": 256,
+    "latent_dim": 16,
     "en_vocab_size": 6000,
     "fr_vocab_size": 6000,
-    "data_dir": "corpus/line_based",
-    "train_dir": "models",
+    "data_dir": "corpus/line_based_7",
+    "num_layers": 1,
     "dnn_in_between": true,
     "batch_norm": false,
     "use_lstm": false,
     "mean_logvar_split": false,
     "elu": true,
-    "buckets": [0, 1, 2],
-    "beam_size": 2,
+    "buckets": [[8,9]],
+    "beam_size": 0,
     "bidirectional": false,
     "learning_rate": 0.001,
     "kl_rate_rise_factor": 0.001,
     "max_gradient_norm": 5.0,
-    "batch_size": 256,
+    "batch_size": 1,
     "kl_rate_rise_time": 50000,
-    "Lambda": 2,
-    "latent_splits": 64,
+    "Lambda": 256,
+    "latent_splits": 16,
     "max_train_data_size": 0,
     "steps_per_checkpoint": 2000,
     "annealing": false,
     "lower_bound_KL": true,
     "feed_previous": true,
     "word_dropout_keep_prob": 0.0,
-    "input_file": "input.txt",
+    "input_file": "corpus/line_based_7/encode_decode.txt",
     "num_pts": 0,
     "num_samples": 0,
-    "decode": true,
-    "self_test": false,
-    "interpolate": false,
     "load_embeddings": false,
     "Lambda_annealing": false,
-    "probabilistic": false
+    "probabilistic": false,
+    "orthogonal_initializer": true
   },
   "interpolate": {
-    "ckpt": "translate",
-    "size": 128,
-    "latent_dim": 64,
+    "size": 256,
+    "latent_dim": 16,
     "en_vocab_size": 6000,
     "fr_vocab_size": 6000,
-    "data_dir": "corpus/line_based",
-    "train_dir": "models",
+    "data_dir": "corpus/line_based_7",
+    "num_layers": 1,
     "dnn_in_between": true,
     "batch_norm": false,
     "use_lstm": false,
     "mean_logvar_split": false,
     "elu": true,
-    "buckets": [0, 1, 2],
-    "beam_size": 2,
+    "buckets": [[8,9]],
+    "beam_size": 0,
     "bidirectional": false,
     "learning_rate": 0.001,
     "kl_rate_rise_factor": 0.001,
     "max_gradient_norm": 5.0,
-    "batch_size": 256,
+    "batch_size": 1,
     "kl_rate_rise_time": 50000,
-    "Lambda": 2,
-    "latent_splits": 64,
+    "Lambda": 256,
+    "latent_splits": 16,
     "max_train_data_size": 0,
     "steps_per_checkpoint": 2000,
     "annealing": false,
     "lower_bound_KL": true,
     "feed_previous": true,
     "word_dropout_keep_prob": 0.0,
-    "input_file": "input.txt",
-    "num_pts": 0,
+    "input_file": "corpus/line_based_7/interp.txt",
+    "num_pts": 10,
     "num_samples": 0,
-    "decode": false,
-    "self_test": false,
-    "interpolate": true,
     "load_embeddings": false,
     "Lambda_annealing": false,
-    "probabilistic": false
+    "probabilistic": false,
+    "orthogonal_initializer": true
   }
 }
