modified_config.json modified

--- a/modified_config.json
+++ b/modified_config.json
@@ -9,14 +9,6 @@
     "use_lstm": false,
     "buckets": [[8,9]],
     "bidirectional": false,
-    "max_gradient_norm": 5.0,
-    "Lambda": 4,
-    "feed_previous": true,
-    "word_dropout_keep_prob": 0.0,
-    "input_file": "input.txt",
-    "num_pts": 0,
-    "num_samples": 0,
-    "anneal": false,
     "probabilistic": true,
     "orthogonal_initializer": true,
     "iaf": true,
@@ -30,79 +22,24 @@
     "kl_rate_rise_time": 50000,
     "max_train_data_size": 0,
     "steps_per_checkpoint": 2000,
+    "feed_previous": true,
+    "Lambda": 4,
+    "max_gradient_norm": 5.0,
+    "word_dropout_keep_prob": 0.0,
+    "anneal": false
   },
   "encode_decode": {
-    "size": 256,
-    "latent_dim": 16,
-    "en_vocab_size": 6000,
-    "fr_vocab_size": 6000,
-    "data_dir": "corpus/line_based_7",
-    "num_layers": 1,
-    "dnn_in_between": true,
-    "batch_norm": false,
-    "use_lstm": false,
-    "mean_logvar_split": false,
-    "buckets": [[8,9]],
-    "beam_size": 0,
-    "bidirectional": false,
-    "learning_rate": 0.001,
-    "kl_rate_rise_factor": 0.001,
-    "max_gradient_norm": 5.0,
     "batch_size": 1,
-    "kl_rate_rise_time": 50000,
-    "Lambda": 4,
-    "latent_splits": 16,
-    "max_train_data_size": 0,
-    "steps_per_checkpoint": 2000,
-    "annealing": false,
-    "lower_bound_KL": true,
     "feed_previous": true,
     "word_dropout_keep_prob": 0.0,
-    "input_file": "corpus/line_based_7/encode_decode.txt",
-    "num_pts": 0,
-    "num_samples": 0,
-    "load_embeddings": false,
-    "Lambda_annealing": false,
-    "probabilistic": false,
-    "orthogonal_initializer": true,
-    "iaf": true,
-    "activation": "prelu"
+    "input_file": "encode_decode.txt",
+    "num_pts": 0
   },
   "interpolate": {
-    "size": 256,
-    "latent_dim": 16,
-    "en_vocab_size": 6000,
-    "fr_vocab_size": 6000,
-    "data_dir": "corpus/line_based_7",
-    "num_layers": 1,
-    "dnn_in_between": true,
-    "batch_norm": false,
-    "use_lstm": false,
-    "mean_logvar_split": false,
-    "buckets": [[8,9]],
-    "beam_size": 0,
-    "bidirectional": false,
-    "learning_rate": 0.001,
-    "kl_rate_rise_factor": 0.001,
-    "max_gradient_norm": 5.0,
     "batch_size": 1,
-    "kl_rate_rise_time": 50000,
-    "Lambda": 4,
-    "latent_splits": 16,
-    "max_train_data_size": 0,
-    "steps_per_checkpoint": 2000,
-    "annealing": false,
-    "lower_bound_KL": true,
     "feed_previous": true,
     "word_dropout_keep_prob": 0.0,
-    "input_file": "corpus/line_based_7/interp.txt",
-    "num_pts": 10,
-    "num_samples": 0,
-    "load_embeddings": false,
-    "Lambda_annealing": false,
-    "probabilistic": false,
-    "orthogonal_initializer": true,
-    "iaf": true,
-    "activation": "prelu"
+    "input_file": "inpterpolate.txt",
+    "num_pts": 0
   }
 }
